[tool.poetry]
name = "air-reservation"
version = "0.1.0"
description = ""
authors = ["Aneeq Tahir <aneeqtaslam391@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
